--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         >
-        <activity android:name=".MenuActivity"
+        <!--android:theme="@style/AppTheme.Material.Ligh"-->
+        <activity
+            android:name=".MenuActivity"
             android:configChanges="orientation"
             android:screenOrientation="landscape">
             <intent-filter>
