--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,19 +7,26 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        >
-        <!--android:theme="@style/AppTheme.Material.Ligh"-->
+        android:theme="@style/AppTheme">
+
+        <!-- android:theme="@style/AppTheme.Material.Ligh" -->
         <activity
             android:name=".MenuActivity"
             android:configChanges="orientation"
-            android:screenOrientation="landscape">
+            android:screenOrientation="landscape"
+            android:showAsAction="never">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".Partie"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:label="@string/title_activity_partie"
+            android:theme="@style/FullscreenTheme" />
+        <activity android:name=".Parti2"></activity>
     </application>
 
 </manifest>
